# poc-like-puch-ai

./: .env.example  .gitignore  Dockerfile  FINAL_SUMMARY.md  LOAD_TESTING_SUMMARY.md  MERGE_SUMMARY.md  PHASE_2A_COMPLETION.md  README.md  SCALABILITY_ANALYSIS.md  SCALABILITY_SUMMARY.txt  TEST_EXECUTION_REPORT.md  TEST_REPORT.md  pyproject.toml
config/: cost-config.yaml  rate-limits.yaml
docs/: CAPACITY_PLANNING_REPORT.md  COST_OPTIMIZATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_START.md  DEV_MODE_GUIDE.md  EXECUTION_SUMMARY.md  EXOTEL_DASHBOARD_WALKTHROUGH.md  QUICK_START_NGROK.md  TESTING_HYBRID_MODE.md  disaster-recovery-runbook.md  domain_definitions.md  exotel-setup-guide.md  multi-region-guide.md  rate-limiting-guide.md  scaling-guide.md  tracing-guide.md
features/: UC-001-accept-incoming-call.feature  UC-002-process-caller-audio.feature  UC-003-generate-ai-response.feature  UC-004-stream-response-to-caller.feature  UC-005-handle-call-termination.feature  UC-006-manage-call-session.feature
ops/: docker-compose.yml  kubernetes-deployment.yaml  nginx.conf  terraform-multi-region.tf
scripts/: benchmark.py  benchmark_results_20260410_230531.csv  benchmark_results_20260410_230531.json  capacity_model.py  capacity_projections_20260410_230538.csv  check_credentials.py  cost_projections_20260410_230538.csv  local_ws_test.py  run_local_validation.sh  sim_exotel.py  sim_exotel_live.py  validate_production_credentials.sh
src/adapters/: gemini_llm_adapter.py  gemini_response_streamer.py  google_stt_adapter.py  google_tts_adapter.py  in_memory_session_repository.py  poc_greeting_then_llm_adapter.py  poc_simple_llm_adapter.py  postgres_call_logger.py  redis_session_repository.py  stub_embedding_model.py  stub_llm_adapter.py  stub_response_streamer.py  stub_stt_adapter.py  stub_tts_adapter.py  webrtc_vad_adapter.py
src/domain/aggregates/: conversation_session.py
src/domain/entities/: ai_response.py  audio_chunk.py  call_session.py  speech_segment.py  utterance.py
src/domain/services/: ab_testing_framework.py  audio_buffer_manager.py  enhanced_audio_buffer_manager.py  fallback_handler.py  interrupt_detector.py  interrupt_metrics.py  noise_floor_learner.py  provider_fallback.py  response_length_optimizer.py  semantic_cache.py  timeout_handler.py  token_ring_buffer.py
src/domain/value_objects/: audio_format.py  stream_identifier.py
src/infrastructure/: audio_analyzer.py  audit_logger.py  auth.py  backup_manager.py  circuit_breaker.py  cost_tracker.py  data_retention.py  encryption.py  exotel_caller_audio_adapter.py  exotel_websocket_handler.py  fallback_audio.py  health.py  logging_config.py  metrics.py  pii_masker.py  rate_limiter.py  server.py  tracing.py
src/ports/: caller_audio_port.py  language_model_port.py  response_streamer_port.py  session_repository_port.py  speech_to_text_port.py  text_to_speech_port.py  voice_activity_detector_port.py
src/use_cases/: accept_call.py  cached_generate_response.py  end_call.py  generate_response.py  process_audio.py  reset_session.py  stream_response.py  streaming_generate_response.py
tests/acceptance/: README.md  __init__.py  test_endpoints.py
tests/e2e/: test_e2e_pipeline.py
tests/integration/: test_data_retention.py  test_graceful_degradation.py  test_jaeger_integration.py  test_length_constraint_enforcement.py  test_metrics_driven_optimization.py  test_network_loss_handling.py  test_noise_floor_learning.py  test_postgres_call_logger.py  test_redis_cache_integration.py  test_redis_session_repository.py  test_response_streaming_latency.py  test_session_locking.py  test_streaming_pipeline.py  test_uc001_accept_incoming_call.py  test_uc002_process_caller_audio.py  test_uc003_generate_ai_response.py  test_uc005_handle_termination.py  test_uc006_manage_call_session.py  test_vad_integration.py  test_websocket_interrupt_integration.py
tests/load/: README.md  __init__.py  test_load_http.py  test_load_websocket.py  test_stress.py
tests/smoke/: test_server_smoke.py
tests/unit/: test_cost_tracker.py  test_health_checks.py  test_metrics.py  test_sim_exotel_live.py
tests/unit/adapters/: test_ai_adapters.py  test_gemini_streaming.py  test_in_memory_session_repository.py  test_stub_adapters.py  test_webrtc_vad_adapter.py
tests/unit/domain/: test_ai_response.py  test_ai_response_interrupts.py  test_audio_chunk.py  test_audio_format.py  test_call_session.py  test_conversation_session.py  test_conversation_session_audio.py  test_conversation_session_history.py  test_conversation_session_responses.py  test_conversation_session_utterances.py  test_performance.py  test_speech_segment.py  test_stream_identifier.py  test_utterance.py
tests/unit/domain/services/: test_ab_testing_framework.py  test_audio_buffer_manager.py  test_enhanced_audio_buffer_manager.py  test_fallback_handler.py  test_interrupt_detector.py  test_interrupt_detector_with_learned_floor.py  test_interrupt_metrics.py  test_noise_floor_learner.py  test_provider_fallback.py  test_response_length_optimizer.py  test_semantic_cache.py  test_timeout_handler.py  test_token_ring_buffer.py
tests/unit/infrastructure/: test_audio_analyzer.py  test_audit_logger.py  test_auth.py  test_backup_manager.py  test_circuit_breaker.py  test_encryption.py  test_exotel_caller_audio_adapter.py  test_exotel_websocket_handler.py  test_logging_config.py  test_pii_masker.py  test_rate_limiter.py  test_tracing.py
tests/unit/ports/: test_all_ports.py  test_caller_audio_port.py
tests/unit/use_cases/: test_accept_call.py  test_cached_generate_response.py  test_end_call.py  test_generate_response.py  test_process_audio.py  test_reset_session.py  test_stream_response.py
